Improve transition style.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
   <meta name="description" content="Modal box by only CSS.">
   <link rel="stylesheet" href="noscript-modal.css">
   <style>
-    body { margin: 0; font-size: 14px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 1.5; color: #333; background-color: #fff; }
-    a { text-decoration: none; color: #08c; }
-    a:hover { text-decoration: underline; }
-    #container { width: 720px; margin: 0 auto; padding: 50px 0; }
-    .ns-modal h2 { margin: 0 0 10px; }
-    .ns-modal p  { margin: 10px 0; }
+    body {
+      margin: 0;
+      font-size: 14px;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 1.5;
+      color: #333;
+      background-color: #fff;
+    }
+    a {
+      text-decoration: none;
+      color: #08c;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    #container {
+      width: 720px;
+      margin: 0 auto;
+      padding: 50px 0;
+    }
+    .ns-modal h2 {
+      margin: 0 0 10px;
+    }
+    .ns-modal p {
+      margin: 10px 0;
+    }
+    #modal02 > .ns-modal-box {
+      width: 360px;
+    }
   </style>
 </head>
 <body>
