--- a/index.html
+++ b/index.html
@@ -5,103 +5,7 @@
   <title>Noscript Modal</title>
   <meta name="description" content="Modal box by only CSS.">
   <link rel="stylesheet" href="noscript-modal.css">
-  <style>
-    body {
-      margin: 0;
-      font-size: 14px;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      line-height: 1.5;
-      color: #333;
-      background-color: #fff;
-    }
-    a {
-      text-decoration: none;
-      color: #08c;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    #container {
-      width: 720px;
-      margin: 0 auto;
-      padding: 50px 0;
-    }
-    .ns-modal h2 {
-      margin: 0 0 8px;
-    }
-    .ns-modal p {
-      margin: 0 0 8px;
-    }
-    .form-head {
-      padding: 15px 15px 2px;
-      border-radius: 4px 4px 0 0;
-      text-shadow: 0 1px 0 rgba(255,255,255,1);
-      background-color: #eee;
-    }
-    .form-body {
-      padding: 15px 25px;
-    }
-    .form-foot {
-      padding: 15px 15px 20px;
-      border-top: 1px solid #ddd;
-      border-radius: 0 0 4px 4px;
-      text-align: right;
-      background-color: #eee;
-    }
-    .label {
-      margin-bottom: 4px;
-    }
-    .input-block {
-      display: block;
-      box-sizing: border-box;
-      width: 100%;
-      margin-bottom: 8px;
-      padding: 5px;
-      border: 1px solid #bbb;
-      box-shadow: inset 0 1px 7px 0 rgba(0,0,0,.08);
-      font-size: 16px;
-    }
-    .input-block:focus {
-      border-color: #c93;
-      box-shadow: inset 0 1px 7px 0 rgba(0,0,0,.08), 0 0 7px 0 rgba(255,200,120,.3);
-      outline: none;
-    }
-    .button {
-      display: inline-block;
-      box-sizing: border-box;
-      min-width: 80px;
-      height: 26px;
-      line-height: 26px;
-      margin-left: 3px;
-      padding: 0 5px;
-      border: none;
-      border-radius: 3px;
-      vertical-align: top;
-      text-align: center;
-      text-decoration: none;
-      text-shadow: 0 1px 0 rgba(0,0,0,.2);
-      font-size: 13px;
-      color: #333;
-      background-color: #fff;
-      background-image: -webkit-linear-gradient(top, #fff, #eee);
-      box-shadow: 0 1px 4px 0 rgba(0,0,0,.3);
-      cursor: pointer;
-    }
-    .button:hover {
-      text-decoration: none;
-    }
-    .button:first-child {
-      margin-left: 0;
-    }
-    .button.button-submit {
-      color: #fff;
-      background-color: #f80;
-      background-image: -webkit-linear-gradient(top, #f80, #e70);
-    }
-    #modal02 > .ns-modal-box {
-      max-width: 340px;
-    }
-  </style>
+  <link rel="stylesheet" href="demo/main.css">
 </head>
 <body>
   <div id="container">
