--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Noscript Modal</title>
   <meta name="description" content="Modal box by only CSS.">
+  <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="noscript-modal.css">
   <link rel="stylesheet" href="demo/main.css">
 </head>
